# 16891_project

./: README.md
16891_project_ws/src/mamp_planning/: CMakeLists.txt  README.md  package.xml
16891_project_ws/src/mamp_planning/include/mamp_planning/: agent.hpp  astar.hpp  backwards_dstar_lite.hpp  cbs_mp.hpp  cbs_mp_dstar_lite_st.hpp  cbs_mp_dstarlite.hpp  collisions.hpp  ct_node.hpp  custom_priority_queue.hpp  dstar_lite.hpp  dstar_lite_st.hpp  edge.hpp  lpastar.hpp  mamp_helper.hpp  open_list.hpp  pbs_dstar_mp.hpp  pbs_node.hpp  prm.hpp  vertex.hpp  viz_tools.hpp
16891_project_ws/src/mamp_planning/launch/: control_utils.launch  mamp_planner.launch  visualization_launch.launch
16891_project_ws/src/mamp_planning/results/: cbsmp_dstarlite_results.csv  cbsmp_dstarlite_stats_4agents.csv  cbsmp_dstarlite_stats_9agents_noshelves.csv  cbsmp_results.csv  cbsmp_stats_4agents_shelves.csv  cbsmp_stats_9agents_noshelves.csv
16891_project_ws/src/mamp_planning/rviz/: urdf.rviz
16891_project_ws/src/mamp_planning/src/: agent.cpp  agent_1.txt  agents.txt  astar.cpp  backwards_dstar_lite.cpp  cbs_mp copy 2.cpp  cbs_mp.cpp  cbs_mp_dstar_lite_st.cpp  cbs_mp_dstarlite.cpp  ct_node.cpp  custom_priority_queue.cpp  dstar_lite.cpp  dstar_lite_st.cpp  edge.cpp  lpastar.cpp  main.cpp  mamp_helper.cpp  open_list.cpp  pbs_dstar_mp.cpp  pbs_node.cpp  prm.cpp  vertex.cpp  viz_tools.cpp
16891_project_ws/src/mamp_planning/tests/: shelf_arm_6_test_0.txt  shelf_mobile_4_test_0.txt  shelf_mobile_4_test_1.txt  shelf_mobile_9_test_0.txt  world_arm_1_test_0.txt  world_arm_1_test_1.txt  world_arm_2_test_0.txt  world_arm_2_test_1.txt  world_arm_3_test_0.txt  world_arm_3_test_1.txt  world_arm_4_test_0.txt  world_arm_4_test_1.txt  world_arm_6_test_0.txt  world_mobile_1_arm_1_test_0.txt  world_mobile_1_arm_6_test_0.txt  world_mobile_1_arm_6_test_1.txt  world_mobile_1_test_0.txt  world_mobile_1_test_1.txt  world_mobile_4_arm_6_test_0.txt  world_mobile_4_arm_6_test_1.txt  world_mobile_4_arm_6_test_2.txt  world_mobile_4_test_0.txt  world_mobile_4_test_1.txt  world_mobile_9_arm_6_test_0.txt  world_mobile_9_arm_6_test_1.txt  world_mobile_9_test_0.txt  world_no_shelves_mobile_4_test_0.txt  world_no_shelves_mobile_4_test_1.txt  world_no_shelves_mobile_4_test_2.txt  world_no_shelves_mobile_9_test_0.txt
16891_project_ws/src/panda_1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
16891_project_ws/src/panda_1_moveit_config/config/: fake_controllers.yaml  gazebo_panda.urdf  kinematics.yaml  ompl_planning.yaml  panda.srdf  stomp_planning.yaml
16891_project_ws/src/panda_1_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
16891_project_ws/src/panda_multiple_arms/: CMakeLists.txt  package.xml
16891_project_ws/src/panda_multiple_arms/config/: trajectory_controller.yaml
16891_project_ws/src/panda_multiple_arms/launch/: bringup_moveit.launch  control_utils.launch  panda_multiple_arms_empty_world.launch
16891_project_ws/src/panda_multiple_arms/robot_description/: arms_2.urdf  mobile_robot.urdf  mobile_robot.xacro  mobile_robot.xml  mobile_test.urdf  panda_multiple_arms.urdf  panda_multiple_arms.xacro  shelf_arm_1.urdf  shelf_arm_6.urdf  shelf_mobile_1.urdf  shelf_mobile_4.urdf  shelf_mobile_9.urdf  walls.urdf  walls.xacro  walls_for_arms.urdf  walls_test.urdf  world_arm_1.urdf  world_arm_1_test.urdf  world_arm_2.urdf  world_arm_3.urdf  world_arm_3_test.urdf  world_arm_4.urdf  world_arm_6.urdf  world_mobile_1.urdf  world_mobile_1_arm_1.urdf  world_mobile_1_arm_6.urdf  world_mobile_4.urdf  world_mobile_4_arm_6.urdf  world_mobile_9.urdf  world_mobile_9_arm_6.urdf  world_multi_mobile.urdf  world_multi_mobile.xacro  world_multi_mobile_no_shelves.urdf  world_no_shelves_mobile_1.urdf  world_no_shelves_mobile_4.urdf  world_no_shelves_mobile_9.urdf  world_party_mobile.urdf  world_party_mobile.xacro  world_party_mobile_no_shelves.urdf  world_single_mobile.urdf  (+2 more)
16891_project_ws/src/panda_multiple_arms/robot_description/xacro/: arm_robot.xacro  arms_2.xacro  franka_utils.xacro  mobile_robot.xacro  mobile_robot_ignore_this_file.xml  shelf_arm_1.xacro  shelf_arm_6.xacro  shelf_mobile_1.xacro  shelf_mobile_4.xacro  shelf_mobile_9.xacro  walls.xacro  walls_for_arms.xacro  world_arm_1.xacro  world_arm_2.xacro  world_arm_3.xacro  world_arm_4.xacro  world_arm_6.xacro  world_mobile_1.xacro  world_mobile_1_arm_1.xacro  world_mobile_1_arm_6.xacro  world_mobile_4.xacro  world_mobile_4_arm_6.xacro  world_mobile_9.xacro  world_mobile_9_arm_6.xacro
16891_project_ws/src/panda_multiple_arms/src/: plan_simple_motion.cpp
16891_project_ws/src/panda_multiple_arms_moveit_config/: .setup_assistant  package.xml
16891_project_ws/src/panda_multiple_arms_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  panda_multiple_arms.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
16891_project_ws/src/panda_multiple_arms_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  stomp_planning_pipeline.launch.xml
